# StudentPlanner/Controllers/AdminDraftController.cs
@@ -1,110 +1,110 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Threading.Tasks;
-using Microsoft.AspNetCore.Http;
-using Microsoft.AspNetCore.Mvc;
-using Microsoft.EntityFrameworkCore;
-using Entities;
-using StudentPlanner.Core.Domain;
-using Microsoft.AspNetCore.Identity;
+﻿//using System;
+//using System.Collections.Generic;
+//using System.Linq;
+//using System.Threading.Tasks;
+//using Microsoft.AspNetCore.Http;
+//using Microsoft.AspNetCore.Mvc;
+//using Microsoft.EntityFrameworkCore;
+//using Entities;
+//using StudentPlanner.Core.Domain;
+//using Microsoft.AspNetCore.Identity;
 
-namespace StudentPlanner.UI.Controllers
-{
-    [Route("api/[controller]")]
-    [ApiController]
-    public class AdminDraftController : ControllerBase
-    {
-        private readonly ApplicationDbContext _context;
-        private readonly UserManager<ApplicationUser> _userManager;
-        public AdminDraftController(ApplicationDbContext context, UserManager<ApplicationUser> userManager)
-        {
-            _context = context;
-            _userManager = userManager;
-        }
+//namespace StudentPlanner.UI.Controllers
+//{
+//    [Route("api/[controller]")]
+//    [ApiController]
+//    public class AdminDraftController : ControllerBase
+//    {
+//        private readonly ApplicationDbContext _context;
+//        private readonly UserManager<ApplicationUser> _userManager;
+//        public AdminDraftController(ApplicationDbContext context, UserManager<ApplicationUser> userManager)
+//        {
+//            _context = context;
+//            _userManager = userManager;
+//        }
 
-        // GET: api/Admin
-        [HttpGet]
-        public async Task<ActionResult<IEnumerable<ApplicationUser>>> GetUsers()
-        {
-            return await _context.Users.ToListAsync();
-        }
+//        // GET: api/Admin
+//        [HttpGet]
+//        public async Task<ActionResult<IEnumerable<ApplicationUser>>> GetUsers()
+//        {
+//            return await _context.Users.ToListAsync();
+//        }
 
-        // GET: api/Admin/5
-        [HttpGet("{id}")]
-        public async Task<ActionResult<ApplicationUser>> GetApplicationUser(Guid id)
-        {
-            var applicationUser = await _context.Users.FindAsync(id);
+//        // GET: api/Admin/5
+//        [HttpGet("{id}")]
+//        public async Task<ActionResult<ApplicationUser>> GetApplicationUser(Guid id)
+//        {
+//            var applicationUser = await _context.Users.FindAsync(id);
 
-            if (applicationUser == null)
-            {
-                return NotFound();
-            }
+//            if (applicationUser == null)
+//            {
+//                return NotFound();
+//            }
 
-            return applicationUser;
-        }
+//            return applicationUser;
+//        }
 
-        // PUT: api/Admin/5
-        // To protect from overposting attacks, see https://go.microsoft.com/fwlink/?linkid=2123754
-        [HttpPut("{id}")]
-        public async Task<IActionResult> PutApplicationUser(Guid id, ApplicationUser applicationUser)
-        {
-            if (id != applicationUser.Id)
-            {
-                return BadRequest();
-            }
+//        // PUT: api/Admin/5
+//        // To protect from overposting attacks, see https://go.microsoft.com/fwlink/?linkid=2123754
+//        [HttpPut("{id}")]
+//        public async Task<IActionResult> PutApplicationUser(Guid id, ApplicationUser applicationUser)
+//        {
+//            if (id != applicationUser.Id)
+//            {
+//                return BadRequest();
+//            }
 
-            _context.Entry(applicationUser).State = EntityState.Modified;
+//            _context.Entry(applicationUser).State = EntityState.Modified;
 
-            try
-            {
-                await _context.SaveChangesAsync();
-            }
-            catch (DbUpdateConcurrencyException)
-            {
-                if (!ApplicationUserExists(id))
-                {
-                    return NotFound();
-                }
-                else
-                {
-                    throw;
-                }
-            }
+//            try
+//            {
+//                await _context.SaveChangesAsync();
+//            }
+//            catch (DbUpdateConcurrencyException)
+//            {
+//                if (!ApplicationUserExists(id))
+//                {
+//                    return NotFound();
+//                }
+//                else
+//                {
+//                    throw;
+//                }
+//            }
 
-            return NoContent();
-        }
+//            return NoContent();
+//        }
 
-        // POST: api/Admin
-        // To protect from overposting attacks, see https://go.microsoft.com/fwlink/?linkid=2123754
-        [HttpPost]
-        public async Task<ActionResult<ApplicationUser>> PostApplicationUser(ApplicationUser applicationUser)
-        {
-            _context.Users.Add(applicationUser);
-            await _context.SaveChangesAsync();
+//        // POST: api/Admin
+//        // To protect from overposting attacks, see https://go.microsoft.com/fwlink/?linkid=2123754
+//        [HttpPost]
+//        public async Task<ActionResult<ApplicationUser>> PostApplicationUser(ApplicationUser applicationUser)
+//        {
+//            _context.Users.Add(applicationUser);
+//            await _context.SaveChangesAsync();
 
-            return CreatedAtAction("GetApplicationUser", new { id = applicationUser.Id }, applicationUser);
-        }
+//            return CreatedAtAction("GetApplicationUser", new { id = applicationUser.Id }, applicationUser);
+//        }
 
-        // DELETE: api/Admin/5
-        [HttpDelete("{id}")]
-        public async Task<IActionResult> DeleteApplicationUser(Guid id)
-        {
-            var applicationUser = await _context.Users.FindAsync(id);
-            if (applicationUser == null)
-            {
-                return NotFound();
-            }
+//        // DELETE: api/Admin/5
+//        [HttpDelete("{id}")]
+//        public async Task<IActionResult> DeleteApplicationUser(Guid id)
+//        {
+//            var applicationUser = await _context.Users.FindAsync(id);
+//            if (applicationUser == null)
+//            {
+//                return NotFound();
+//            }
 
-            _context.Users.Remove(applicationUser);
-            await _context.SaveChangesAsync();
+//            _context.Users.Remove(applicationUser);
+//            await _context.SaveChangesAsync();
 
-            return NoContent();
-        }
+//            return NoContent();
+//        }
 
-        private bool ApplicationUserExists(Guid id)
-        {
-            return _context.Users.Any(e => e.Id == id);
-        }
-    }
-}
+//        private bool ApplicationUserExists(Guid id)
+//        {
+//            return _context.Users.Any(e => e.Id == id);
+//        }
+//    }
+//}
